fixed alignment of top nav

--- a/aspc/static/css/styles.css
+++ b/aspc/static/css/styles.css
@@ -832,7 +832,6 @@ nav#sitewide .group#partners {
 
 nav#topnav {
 	border-bottom: 1px solid #162554;
-	font-size: 0.9em;
 	color: #dedff1;
 	background: #243546;
 	padding-top: 0.8em;
@@ -875,6 +874,9 @@ nav#topnav li a:hover {
 
 /* @group login form */
 
+#topnav #user {
+	font-size: 0.9em;
+}
 
 nav#topnav #user input, nav#topnav #user select {
 	background-color: #33465e;
